--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 
 <body>
 <p id="instruction">
-Press any key (or the START button) to start the game. Simon(the bot) will give the first signal. Repeat the signal by pressing the same color lens.
-
-Simon will add one more signal. Repeat the first and second signals by pressing the same color lenses, in order.
-
-Simon will add another signal, thus increasing the sequence you that you have to complete correctly.
-
-Continue playing as long as you can repeat each sequence of signals correctly.
-
+Press any key (or the START button) to start the game. 
+Simon(the bot) will give the first signal. Repeat the signal by pressing the same color lens.
+Simon will add one more signal. Repeat the first and second signals by pressing the same color lenses,
+in order. Simon will add another signal, thus increasing the sequence you that you have to complete correctly.
+Continue playing as long as you can repeat each sequence of signals correctly. <br>
 If you fail to repeat a sequence exactly, Simon responds with a "RAZZ" sound. This means you've lost, and the sequence of signals ends.
-  </p>
+</p>
 
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
